note use of --illegal-access=permit for J16